--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,11 @@ general:
   artifacts:
     - "_output"
 
+dependencies:
+  pre:
+    - mkdir ~/.fonts
+    - cp fonts/* ~/.fonts/
+
 test:
   override:
     - bundle exec rake
